--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -36,8 +36,8 @@
         </ul>
 
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="">Bienvenido: Carlos Villan</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Cerrar Session</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Bienvenido: Alejandro Romero 72459</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Log Out</a></li>
         </ul>
     </div>
 </nav>
